--- a/client/src/Components/Styles/Footer.module.css
+++ b/client/src/Components/Styles/Footer.module.css
@@ -12,6 +12,8 @@
 }
 .List {
   display: flex;
+  width: 100%;
+  padding: 0;
   justify-content: space-evenly;
 }
 .ListItem {
@@ -29,4 +31,13 @@
 .ListItem img {
   width: 100px;
   height: 100px;
+}
+@media screen and (max-width: 500px) {
+  .footerContainer {
+    padding: 2em;
+  }
+  .ListItem img {
+    width: 50px;
+    height: 50px;
+  }
 }
