--- a/client/src/Components/Styles/List.module.css
+++ b/client/src/Components/Styles/List.module.css
@@ -1,7 +1,7 @@
 .list {
   height: 100%;
   max-height: 12160px;
-  padding: 4em;
+  padding: 4vw;
   list-style-type: none;
 }
 .listItem {
